--- a/styles/styles.css
+++ b/styles/styles.css
@@ -36,7 +36,7 @@ body {
 #navbar {
   position: fixed;
   z-index: 100;
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(0, 0, 0, 0.5);
   backdrop-filter: blur(0.5vh);
   display: flex;
   align-items: center;
@@ -83,7 +83,7 @@ body {
   margin: auto;
   width: 50%;
   /* Creates a frosted glass effect */
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(255, 255, 255, 0.6);
   box-shadow: inset 0 0 100vw rgba(255, 255, 255, 1);
   backdrop-filter: blur(0.5vh);
   padding: 1vh 0vw;
@@ -98,9 +98,11 @@ body {
 /* text box styling, aligns text to the center, take up as much space as possible and rounded borders */
 .text-box {
   text-align: center;
-  padding: 5% 10%;
+  padding: 2.5% 5%;
   max-width: 100%;
+  height: 50%;
   border-radius: 5vh;
+  box-sizing: border-box;
 }
 
 .text-box > h2 {
@@ -109,7 +111,6 @@ body {
 }
 
 .text-box > ul {
-  margin-top: 10%;
   font-size: 1.5rem;
   text-align: left;
 }
@@ -117,38 +118,73 @@ body {
 /* Creates spacing between each bullet point */
 
 .text-box > ul > li {
-  margin-top: 5%;
-}
-#container {
-  overscroll-behavior: none;
-  height: 100vh;
-  display: flex;
-  flex-wrap: nowrap;
-  align-items: center;
+  margin-top: 2.5%;
 }
 
 .panel {
-  position: absolute;
-  height: 100%;
-  left: 100%;
   border-radius: 5vh;
   overflow: hidden;
-  border: solid #f9f9f9 0.5vw;
+  border: solid black 0.2vw;
   background-color: #91c8e4;
-  width: 23vw;
-  height: 46vh;
-  opacity: 1;
+  width: 80vw;
+  height: 85vh;
+  margin: 10vh auto;
+  opacity: 0;
+  will-change: transform;
+}
+
+.image-container {
+  height: 50%;
+  display: flex;
+  gap: 1vw;
+  background-color: black;
+  flex-direction: row;
+  overflow: auto;
+  object-fit: contain;
+  content-visibility: auto;
+}
+
+.image-container::-webkit-scrollbar {
+  height: 1.2vh;
+  background-color: gray;
+}
+
+.image-container::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 0px rgba(0, 0, 0, 0);
+}
+
+.image-container::-webkit-scrollbar-thumb {
+  height: 1.2vh;
+  border-radius: 1.2vh;
+  background-color: #d5ac68;
+}
+
+.image-container::-webkit-scrollbar-thumb:hover {
+  cursor: pointer;
+  background-color: #f1db9d;
+}
+
+.image-container::-webkit-scrollbar:vertical {
+  display: none;
+}
+
+.image2 {
+  object-fit: contain;
+  z-index: 10;
+  height: 100%;
+  cursor: pointer;
 }
 
 #gallery {
   text-align: center;
+  margin-top: 15vh;
 }
 
 #gallery > h2 {
   font-size: 5vh;
   text-decoration: underline;
   font-weight: bold;
-  color: #f9f9f9;
+  color: black;
 }
 
 #imgcontainer {
@@ -159,10 +195,12 @@ body {
   width: fit-content;
   gap: 1vw;
   content-visibility: auto;
+  overflow-x: auto;
 }
 
 #imgcontainer > .image {
   height: 75vh;
+  border: solid black 0.5vw;
   object-fit: contain;
 }
 
@@ -175,7 +213,7 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 9999;
+  z-index: 101;
   width: 100vw;
   height: 100vh;
   background-size: contain;
