--- a/styles/panel.css
+++ b/styles/panel.css
@@ -4,7 +4,6 @@
   display: flex;
   flex-direction: row;
   overflow: hidden;
-  border: solid #fffffe 0.1vw;
   background-color: transparent;
   background-color: #fffffe;
   width: 50vw;
@@ -27,19 +26,8 @@
 }
 
 .text-box > h2 {
-  font-size: 1.8vw;
+  font-size: 2vw;
   text-decoration: underline;
-}
-
-.text-box > ul {
-  font-size: 1.4vw;
-  text-align: left;
-}
-
-/* Creates spacing between each bullet point */
-
-.text-box > ul > li {
-  margin-top: 2.5%;
 }
 
 .img_expand {
@@ -94,8 +82,8 @@
 }
 
 .image-container::-webkit-scrollbar-track {
-  border-top: 0.4vw solid transparent;
-  border-bottom: 0.4vw solid transparent;
+  border-top: 0.45vw solid transparent;
+  border-bottom: 0.45vw solid transparent;
   background-clip: padding-box;
   border-radius: 0.5vw;
   background-color: #fffffe;
@@ -119,15 +107,13 @@
 
 .image2 {
   object-fit: contain;
-  z-index: 10;
+  z-index: 1;
   height: 100%;
   cursor: zoom-in;
 }
 
 .panel-grid {
   display: grid;
-  grid-template-columns: 10vw 10vw;
-  grid-template-rows: 6vw 6vw;
   column-gap: 5vw;
   row-gap: 2vw;
   justify-content: center;
@@ -136,9 +122,40 @@
 }
 
 .content-box {
+  position: relative;
+  display: flex;
+  align-items: center;
   border-radius: 1vw;
+  font-size: 0.9vw;
   border: 0.2vw solid #0f0e17;
   background-color: #ff8906;
   color: #fffffe;
   padding: 1vw;
+  width: 17.5vw;
+  box-sizing: border-box;
+  white-space: nowrap;
+}
+
+.img-icon {
+  display: flex;
+  align-items: center;
+  width: 2vw;
+}
+
+.content-box-2 {
+  position: relative;
+  display: flex;
+  align-items: center;
+  border-radius: 1vw;
+  font-size: 1vw;
+  border: 0.2vw solid #0f0e17;
+  background-color: #ff8906;
+  color: #fffffe;
+  padding: 1vw;
+  box-sizing: border-box;
+  grid-column: 1 / 3;
+}
+
+.content-box-2 > ul {
+  line-height: 1.5;
 }
