--- a/styles/booking_page.css
+++ b/styles/booking_page.css
@@ -1,17 +1,54 @@
 #booking_page {
+  position: relative;
+  display: block;
   background-color: #fffffe;
-  margin: auto;
-  width: 60vw;
-  height: 60vh;
+  width: 30vw;
+  height: 20vh;
+  column-gap: 5vw;
+  row-gap: 2vw;
   border-radius: 1vw;
   padding: 4vh 3vw;
+  margin: 35vh auto;
 }
 
-.input_box {
-  width: 100%;
-  padding: 0.8vh 0.8vw;
+#booking_page > .input_box {
+  width: 50%;
+  font-size: 0.7vw;
+  height: 7.5%;
+  padding: 0 1vw;
   margin: 0.5vh 0 2vh 0;
   display: inline-block;
   border: 0.1vw solid #a7a9be;
+}
+
+.booking_date {
+  border: none;
   box-sizing: border-box;
+  outline: 0;
+  padding: 0.75rem;
+  position: relative;
+  width: 100%;
+}
+
+input[type="date"]::-webkit-calendar-picker-indicator {
+  background: transparent;
+  bottom: 0;
+  color: transparent;
+  cursor: pointer;
+  height: auto;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: auto;
+}
+
+.booking_submit {
+  cursor: pointer;
+  color: #fffffe;
+  margin-top: 2.5%;
+  background-color: #0f0e17;
+  border: solid 0.1vw #0f0e17;
+  padding: 1vh 1vw;
+  transition: all 0.1s;
 }
