--- a/styles/booking_page.css
+++ b/styles/booking_page.css
@@ -1,6 +1,6 @@
 #booking_page {
   position: relative;
-  display: block;
+  display: none;
   background-color: #fffffe;
   width: 30vw;
   height: 20vh;
