--- a/styles/styles.css
+++ b/styles/styles.css
@@ -85,6 +85,7 @@ body {
 
 /* About us section */
 .about-us {
+  box-sizing: border-box;
   /* To align the div in the centre */
   text-align: center;
   margin: auto;
@@ -92,7 +93,7 @@ body {
   /* Creates a frosted glass effect */
   background-color: rgba(255, 255, 254, 0.7);
   backdrop-filter: blur(0.5vw);
-  padding: 1vh 0vw;
+  padding: 1vh 1vw;
 }
 
 /* Creates space bewteen title and text, adds extra padding to div overall to make it seem more centered */
